.deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: crvx-app
  name: crvx-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: crvx-app
  template:
    metadata:
      labels:
        app: crvx-app
    spec:
      containers:
        - image: sundowndev/website@sha256:884198b2caf3826640a8a0c433c0a7e69eb389ee31af256ecc2761fc95b233b2
          name: crvx-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
