.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crvx-app
  name: crvx-app-svc
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: crvx-app
