.deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crvx-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: "crvx.fr.,www.crvx.fr.,raphael.crvx.fr."
    external-dns.alpha.kubernetes.io/ttl: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header  Content-Security-Policy "default-src 'self' 'https://raw.githubusercontent.com';frame-ancestors 'self';style-src 'self';script-src 'self';img-src 'self';font-src 'self'";
        add_header  X-Frame-Options SAMEORIGIN;
        add_header  X-Content-Type-Options nosniff;
        add_header  Referrer-Policy no-referrer;
spec:
  rules:
    - host: crvx.fr
      http:
        paths:
          - backend:
              service:
                name: crvx-app-svc
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: www.crvx.fr
      http:
        paths:
          - backend:
              service:
                name: crvx-app-svc
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: raphael.crvx.fr
      http:
        paths:
          - backend:
              service:
                name: crvx-app-svc
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - crvx.fr
        - www.crvx.fr
        - raphael.crvx.fr
      secretName: crvx-fr-tls
